--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li>Link 3</li>
           <li>Link 4</li>
           <li>Link 5</li>
+          <li>Link 6</li>
         </ul>
       </nav>
     </header>
