--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <section>
         <article>
-          <h1>Heading</h1>
+          <span>TestText</span>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus,
             dolore debitis. Totam explicabo possimus sint, sunt vero aliquam,
